header on small screen fix

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ header {
   height: 80px;
   width: 100%;
   padding: 0px 30px;
-  font-size: clamp(0.7rem, 1vw, 1rem);
+  font-size: clamp(0.1rem, 1vw, 1rem);
   position: fixed;
   z-index: 1;
 }
